# wsidicomizer

./: .flake8  .gitignore  CHANGELOG.md  LICENCE  README.md  package-lock.json  pyproject.toml  pyrightconfig.json  pytest.ini
.github/workflows/: black.yml  flake8.yml  lint.yml  pytest.yaml  release.yml  run_pytests.yaml
dicomizer/: __init__.py  dataset.py
opentile_dicomizer/: interface.py
tests/: conftest.py  convert_test_functions.py  download_test_images.py  test_contributing_equipment.py  test_convert.py  test_convert_mirax.py  test_convert_ndpi.py  test_convert_philips.py  test_convert_svs.py  test_import_czi.py  test_native_passthrough.py  test_openslide_handle.py  test_pixel_wsi_instance.py  test_uid_resolver.py  test_wsi_format.py  test_wsidicomizer.py
tests/metadata/: conftest.py  helpers.py  test_base_model.py  test_metadata.py  test_optical_path.py
tests/metadata/dicom/: test_dicom_attribute.py  test_from_dataset.py  test_into_dataset.py  test_sample.py  test_sample_dicom.py
tests/metadata/dicom_schema/: conftest.py  test_dicom_lut.py  test_dicom_sample.py  test_dicom_schema.py  test_into_dataset.py  test_nesting.py
tests/metadata/json_schema/: conftest.py  test_fields.py  test_json_fields.py  test_json_sample.py  test_json_schema.py  test_json_slide.py  test_schema.py  test_slide.py
tests/metadata/schema/: test_fields.py  test_sample.py  test_schema.py  test_slide.py
tests/sources/: test_czi_metadata.py  test_czi_source.py  test_isyntax_source.py  test_openslide_like_metadata.py  test_openslide_like_vendor_metadata.py  test_openslide_source.py  test_opentile_metadata.py  test_opentile_source.py  test_tiffslide_source.py
tests/testdata/: region_definitions.json  test_parameters.py
wsidicomizer/: __init__.py  base_dicomizer.py  bioformats.py  cli.py  common.py  config.py  czi.py  czi_wrapper.py  dataset.py  dicomizer_source.py  encoding.py  image_data.py  image_data_wrappers.py  imagedata_wrapper.py  interface.py  metadata.py  openslide.py  openslide_patch.py  openslide_wrapper.py  opentile.py  opentile_wrapper.py  pixel_wsi_instance.py  uid_resolver.py  wsi_format.py  wsidicomizer.py
wsidicomizer/bioformats/: __init__.py  bioformats_cli.py  bioformats_dicomizer.py  bioformats_image_data.py  bioformats_reader.py  bioformats_source.py
wsidicomizer/cli/: bioformats_cli.py  wsidicomizer_cli.py
wsidicomizer/extras/bioformats/: __init__.py  bioformats_cli.py  bioformats_dicomizer.py  bioformats_image_data.py  bioformats_reader.py  bioformats_source.py
wsidicomizer/extras/isyntax/: __init__.py  isyntax_image_data.py  isyntax_metadata.py  isyntax_source.py
wsidicomizer/extras/openslide/: __init__.py  openslide.py  openslide_handle.py  openslide_image_data.py  openslide_metadata.py  openslide_source.py
wsidicomizer/metadata/: __init__.py  base.py  base_model.py  defaults.py  dicom_attribute.py  equipment.py  fields.py  image.py  image_metadata.py  label.py  model_base.py  optical_path.py  patient.py  sample.py  schema.py  series.py  slide.py  study.py  util.py  wsi.py
wsidicomizer/metadata/dicom_schema/: base_dicom_schema.py  dicom_constants.py  dicom_fields.py  equipment.py  image.py  label.py  optical_path.py  patient.py  sample.py  series.py  slide.py  study.py  wsi.py
wsidicomizer/metadata/json_schema/: equipment.py  fields.py  image.py  label.py  optical.py  patient.py  sample.py  series.py  slide.py  study.py  wsi.py
wsidicomizer/metadata/schema/: equipment.py  fields.py  image.py  label.py  optical.py  patient.py  sample.py  series.py  slide.py  study.py  wsi.py
wsidicomizer/model/: base.py  equipment.py  label.py  optical_path.py  patient.py  sample.py  series.py  slide.py  specimen.py  study.py  wsi.py
wsidicomizer/sources/: __init__.py  czi.py  openslide.py  opentile.py
wsidicomizer/sources/czi/: __init__.py  czi_image_data.py  czi_imagedata.py  czi_metadata.py  czi_source.py
wsidicomizer/sources/openslide_like/: __init__.py  openslide_like_image_data.py  openslide_like_metadata.py  openslide_like_source.py  openslide_like_vendor_metadata.py
wsidicomizer/sources/opentile/: __init__.py  opentile_image_data.py  opentile_metadata.py  opentile_source.py
wsidicomizer/sources/tiffslide/: __init__.py  tiffslide_image_data.py  tiffslide_metadata.py  tiffslide_source.py
