[tool.poetry]
name = "wsidicomizer"
version = "0.23.0"
description = "Tool for reading WSI files from proprietary formats and optionally convert them to to DICOM"
authors = ["Erik O Gabrielsson <erik.o.gabrielsson@sectra.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/imi-bigpicture/wsidicomizer"
keywords = ["whole slide image", "digital pathology", "dicom", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]

[tool.poetry.dependencies]
python = "^3.10"
wsidicom = "^0.28.0"
opentile = "^0.19.0"
numpy = ">=1.22.0"
pydicom = ">=3.0.0"
czifile = "^2019.7.2"
tiffslide = "^2.5.1"
openslide-python = { version = "^1.3.0", optional = true }
scyjava = { version = "^1.8.1", optional = true }
ome-types = {version = "^0.5.0", optional = true }
pyisyntax = {version = "^0.1.2", optional = true }
imagecodecs = { version = "^2024.12.30",  optional = true }

[tool.poetry.extras]
openslide = ["openslide-python"]
bioformats = ["scyjava", "ome-types"]
isyntax = ["pyisyntax"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.0"
pytest-watch = "^4.2.0"
requests = "^2.28.1"
dicom-validator = "^0.4.0"
black = "^24.2.0"
flake8 = "^7.0.0"
openslide-python = "^1.3.0"
coverage = "^7.2.7"
codespell = "^2.2.5"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wsidicomizer = "wsidicomizer.cli:main"
