[project]
name = "wsidicomizer"
version = "0.24.0"
description = "Tool for reading WSI files from proprietary formats and optionally convert them to to DICOM"
authors = [
    { name = "Erik O Gabrielsson", email = "erik.o.gabrielsson@sectra.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["whole slide image", "digital pathology", "dicom", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "wsidicom>=0.29.0,<0.30.0",
    "opentile>=0.19.0,<0.20.0",
    "numpy>=1.22.0",
    "pydicom>=3.0.0",
    "czifile>=2019.7.2,<2020.0.0",
    "tiffslide>=2.5.1,<3.0.0",
    "imagecodecs>=2024.12.30,<2025.0.0",
    "click>=8.3.0,<9.0.0",
]

[project.optional-dependencies]
openslide = ["openslide-python>=1.3.0,<2.0.0"]
bioformats = ["scyjava>=1.8.1,<2.0.0", "ome-types>=0.5.0,<0.6.0"]
isyntax = ["pyisyntax>=0.1.2,<0.2.0"]

[dependency-groups]
dev = [
    "pytest>=8.1.0,<9.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
    "requests>=2.28.1,<3.0.0",
    "dicom-validator>=0.4.0,<0.5.0",
    "black>=24.2.0,<25.0.0",
    "flake8>=7.0.0,<8.0.0",
    "openslide-python>=1.3.0,<2.0.0",
    "coverage>=7.2.7,<8.0.0",
    "codespell>=2.2.5,<3.0.0",
]

[project.scripts]
wsidicomizer = "wsidicomizer.cli:main"

[project.urls]
Repository = "https://github.com/imi-bigpicture/wsidicomizer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
