[project]
name = "wsidicomizer"
version = "0.25.0"
description = "Tool for reading WSI files from proprietary formats and optionally convert them to to DICOM"
authors = [
    { name = "Erik O Gabrielsson", email = "erik.o.gabrielsson@sectra.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.11"
keywords = ["whole slide image", "digital pathology", "dicom", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "wsidicom>=0.30.0,<0.31.0",
    "opentile>=0.21.0,<0.22.0",
    "numpy>=1.22.0",
    "pydicom>=3.0.0",
    "czifile>=2019.7.2.3,<2020.0.0",
    "tiffslide>=3.0.0,<4.0.0",
    "click>=8.3.0,<9.0.0",
]

[project.optional-dependencies]
openslide = ["openslide-python>=1.3.0,<2.0.0"]
bioformats = ["scyjava>=1.8.1,<2.0.0", "ome-types>=0.5.0,<0.6.0"]
isyntax = ["pyisyntax>=0.1.2,<0.2.0"]
imagecodecs = ["imagecodecs>=2024.1.1,!=2024.9.22"]
pylibjpeg-rle = ["pylibjpeg-rle>=2.0.0,<3.0.0"]
pyjpegls = ["pyjpegls>=1.2.0,<2.0.0"]
pylibjpeg-openjpeg = ["pylibjpeg-openjpeg>=2.1.1,<3.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.1.0,<9.0.0",
    "pytest-watch>=4.2.0,<5.0.0",
    "requests>=2.28.1,<3.0.0",
    "dicom-validator>=0.4.0,<0.5.0",
    "ruff>=0.15.14",
    "pyright>=1.1.409",
    "openslide-python>=1.3.0,<2.0.0",
    "coverage>=7.2.7,<8.0.0",
    "codespell>=2.2.5,<3.0.0",
]

[project.scripts]
wsidicomizer = "wsidicomizer.cli:main"

[project.urls]
Repository = "https://github.com/imi-bigpicture/wsidicomizer"

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# E/F: pycodestyle+pyflakes (replaces the old flake8 dep)
# I: import sorting, UP: pyupgrade, B: bugbear, SIM: simplify
# S: flake8-bandit security rules (the free SAST baseline)
select = ["E", "F", "I", "UP", "B", "SIM", "S"]
# S101: asserts are used throughout for type narrowing and internal invariants.
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use hardcoded credentials (S105/S106), pseudo-random test
# data (S311), md5 for image-hash comparison (S324), and file handles whose
# lifetime is managed by a fixture/wrapper rather than a context manager (SIM115).
"tests/**" = ["S105", "S106", "S311", "S324", "SIM115"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
